Fix alignment of bottom bar in block picker
Bottom bar would start immediately underneath block description rather
than at the bottom of the whole container. This meant if descriptions
had different lengths for different blocks the bottom bar containing
number of layouts + "Pick layout" button would not be vertically aligned
with each other anymore.

--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-grid.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-grid.less
@@ -41,6 +41,7 @@
                 height: 100%;
                 margin: 0;
                 cursor: pointer;
+                justify-content: space-between;
 
                 .p-pick-blocks__inner__container {
                     display: flex;
